# easy_scan

./: Cargo.toml  README.md  build.sh  package-lock.json  package.json
easy_scan_backend/: .gitignore  Cargo.toml
easy_scan_backend/src/: main.rs  metadata.rs  pdf_handler.rs  printer.rs
easy_scan_website/: package-lock.json  package.json
easy_scan_website/public/: index.html  manifest.json
easy_scan_website/src/: App.css  App.js  FileUploadButton.js  PrintersList.js  StorageContextProvider.js  StorageList.js
easy_scan_website/src/edit_view/: EditBar.js  EditView.js
src/: main.rs
