[package]
name = "easy_scan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
actix-cors = "0.6.1"
actix-multipart = "0.4.0"
uuid = { version = "0.8", features = ["v4", "v5"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.21"


[features]
build_script = []
